[gd_scene load_steps=27 format=3 uid="uid://di84l3ewuveyq"]

[ext_resource type="Texture2D" uid="uid://1y1f6bsjvcc7" path="res://player/assets/Body/Body.png" id="1_oul6g"]
[ext_resource type="Script" uid="uid://c2b3ogiwi4sn" path="res://player/player.gd" id="1_qjkh3"]
[ext_resource type="Texture2D" uid="uid://dko3c5y0su347" path="res://player/assets/Hair/Hair4.png" id="2_rkbax"]
[ext_resource type="Texture2D" uid="uid://bqgusny5dpbkk" path="res://player/assets/Shirt/Shirt4.png" id="3_g1dw6"]
[ext_resource type="Script" uid="uid://bd58ue24pbk66" path="res://player/player_hud.gd" id="5_qjkh3"]
[ext_resource type="PackedScene" uid="uid://dfli2chvufqhr" path="res://weapons/shotgun/shotgun.tscn" id="6_g6k8r"]

[sub_resource type="Animation" id="Animation_yw30f"]
length = 1.00002
loop_mode = 1
step = 0.2

[sub_resource type="Animation" id="Animation_g1dw6"]
resource_name = "idle"
length = 1.00002
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../HairSprite:frame")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ShirtSprite:frame")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qjkh3"]
_data = {
&"RESET": SubResource("Animation_yw30f"),
&"idle": SubResource("Animation_g1dw6")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_yw30f"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjkh3"]
atlas = ExtResource("1_oul6g")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6k8r"]
atlas = ExtResource("1_oul6g")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_boad6"]
atlas = ExtResource("1_oul6g")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kqu6x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw30f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjkh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6k8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boad6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_rgyib"]
atlas = ExtResource("2_rkbax")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6s5"]
atlas = ExtResource("2_rkbax")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t03j"]
atlas = ExtResource("2_rkbax")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yllr7"]
atlas = ExtResource("2_rkbax")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hg6s5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgyib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t03j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yllr7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_e7oew"]
atlas = ExtResource("3_g1dw6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c35mf"]
atlas = ExtResource("3_g1dw6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7c3f"]
atlas = ExtResource("3_g1dw6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_65viv"]
atlas = ExtResource("3_g1dw6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8t03j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7oew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c35mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7c3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65viv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1dw6"]
size = Vector2(8, 7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qjkh3"]
bg_color = Color(0.9999998, 0.23589358, 0.071170785, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 23
script = ExtResource("1_qjkh3")

[node name="Shotgun" parent="." instance=ExtResource("6_g6k8r")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../BodySprite")
libraries = {
&"": SubResource("AnimationLibrary_qjkh3")
}

[node name="BodySprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kqu6x")
animation = &"idle"
autoplay = "idle"

[node name="HairSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_hg6s5")
animation = &"idle"
autoplay = "idle"

[node name="ShirtSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8t03j")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_g1dw6")

[node name="Hud" type="CanvasLayer" parent="."]
script = ExtResource("5_qjkh3")
player_node = NodePath("..")
weapon_node = NodePath("../Shotgun")

[node name="Control" type="Control" parent="Hud"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AmmoCount" type="Label" parent="Hud/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 61.0
grow_vertical = 0
text = "sdgsdrg"

[node name="HealthBar" type="ProgressBar" parent="Hud/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -408.1277
offset_top = -46.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_qjkh3")
value = 6.35
fill_mode = 1
